--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,4 +25,4 @@ jobs:
               run: dotnet pack --configuration Release
 
             - name: Publish
-              run: dotnet nuget push "MoneyExtension/bin/Release/*.nupkg" -k ${{ secrets.NUGET_TOKEN }} -s https://api.nuget.org/v3/index.json
+              run: dotnet nuget push "MoneyExtension/bin/Release/*.nupkg" -k oy2aeyinl6epnjfeutoaqyl5vtmez76udd3xbmvj5plbhi -s https://api.nuget.org/v3/index.json
